@@ -5,6 +5,9 @@
  * finished strip support in pmkinstall.
  * re-enabled pmkinstall build in makefiles.
  * added test_pmkinstall in test_all target in makefiles.
+ * added mkvar_test.c in tests directory.
+ * added mkvar target in tests makefile.
+ * rewritten get_make_var() to work with gnu make.
 
 27 Nov 2003 mipsator
  * updated pmkinstall man page.
